bg black, rez adjustments

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header"><i class="fa fa-graduation-cap" style="color:white" aria-hidden="true"></i> EDUCATION</h3>
-                            <span class="boldRezHed">Ga. Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                            <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
                             <span class="rezSubHed">Full Stack Web Development Bootcamp</span>
                             <br>
-                            <span class="rezDetails">Intensive, 24-week bootcamp to understand, design and build web applications</span>
+                            <span class="rezDetails">&bull; Intensive, 24-week bootcamp to understand, design and build web applications</span>
                             <br>
                             <br>
 
@@ -136,19 +136,19 @@
 
                                 <!-- BUY OR BUCK NAME -->
                                 <a href="#buck">
-                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 27px; color: black;">Buy</span><span style="color:black">&nbsp;or </span><span style="font-family: 'Audiowide', cursive; font-size: 23px; color:black">Buck</span> 
+                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 29px; color: whitesmoke;">Buy</span><span style="color:whitesmoke">&nbsp;or </span><span style="font-family: 'Audiowide', cursive; font-size: 25px; color:whitesmoke">Buck</span> 
                                 </a>
                                 <br>
                                 <br>
                                 <!-- HOW YOU DOIN NAME -->
                                 <a href="#doin"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 27px ;color:black">How <span style="color:black">You</span> Doin&rsquo;? </span>
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 29px ;color:whitesmoke">How <span style="color:whitesmoke">You</span> Doin&rsquo;? </span>
                                 </a>
                                 <br>
                                 <br>
                                 <!-- YOU GOT THIS NAME -->
                                 <a href="#got"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:20px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:black">You Got This</span></a>
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:22px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:whitesmoke">You Got This</span></a>
                                 <br>
                                 <br>
                                 <h5><strong>Development with:</strong></h5>
@@ -174,18 +174,19 @@
                         <div class="portfolio-resume-wrapper">
                             <h3 class="portfolio-resume-header"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h3>
                             <h5><strong>Georgia Press Association</strong></h5>
-                            <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | 2017 Religion Writing</a><br>
-                            <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia"> 2nd place | 2017 Feature Writing </a>                            <br>
-                            <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | 2015 Religion Coverage </a>                            <br><br>
+                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | 2017 Religion Writing</a><br>
+                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia"> 2nd place | 2017 Feature Writing </a>                            <br>
+                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | 2015 Religion Coverage </a>                            <br><br>
                             <h5><strong>S.C. Press Association</strong></h5>
                             <span class="bullet"> &bull;</span> 3rd place | 2010 Article Series <br>
-                            <span class="bullet"> &bull;</span> <a style="color:black" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm"> 1st place | 2009 Lifestyle Feature Writing </a>                            <br><br>
+                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm"> 1st place | 2009 Lifestyle Feature Writing </a>                            <br><br>
                             <h5><strong>Armstrong State Univ.</strong></h5>
-                            <span style="font-weight:bold"> Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
+                            <span style="font-weight:bold">&bull; Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
 
                             <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
 
-                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and spent the last decade in print journalism. <br><br>                            &nbsp;&nbsp;She is creative with an eye for design and coding skills, and thus hopes to herald
+                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and worked the last decade in print journalism. <br><br>                            
+                            &nbsp;&nbsp;Creative, and with an eye for design, she hopes coding skills will help her herald
                             more good news across the land.
 
 
