soc btn on home page added; and mas

--- a/cutCode.html
+++ b/cutCode.html
@@ -5,6 +5,31 @@ Available Fonts:
     font-family: 'Passion One', cursive;
 
 
+    <!--START de 1200 MEDIA Q  -->
+
+
+    /* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1200px) {
+    
+    .mosesTitle {
+font-family:'Monofett', cursive; 
+font-size:210px;
+}
+
+        .callout H4 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    line-height: 43px;
+    font-size: 47px;
+    text-align: right;
+    color: white;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 50px;
+     margin-bottom: 250px;
+}
+
+    <!--END de 1200 MEDIA Q  -->
+
 <!-- START    Grey square socials  -->
             <div class="social-links">
                 <div class="row">
