font fix 4 mobile?

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- START socials row -->
             <div class="row">
                 <hr>
-                <h4>web design <span style="color:#ff1d8e">+</span> development </h4>
+                <h4>web design <span style="color:#ff1d8e">+</span><span style="color:grey"> development </span></h4>
                 <hr>
 <br><br><br>
                 <div class="large-4 columns page-scroll">
