--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <!-- Google Fonts link -->
-    <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Lato|Pacifico|Architects+Daughter|Georgia|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
+    <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Lato|Pacifico|Architects+Daughter|Georgia|Nova+Mono|Comfortaa|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
         rel="stylesheet">
     <!-- Use these stylesheets for icons and typography in head of your HTML doc if you want :) -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
