buttons inline + below

--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
             <!-- START socials row -->
             <div class="row">
                 <hr>
-                                <!-- SOC MEDIA BTNS --><div class="rounded-social-buttons end">
+                                <!-- SOC MEDIA BTNS --><div class="rounded-social-buttons ">
+                                     Projects + Resume <a class="social-button id-card" target="_blank" href="#pencilTarget"><i class="fa fa-paint-brush "></i></a>
+                                    <a class="social-button id-card" target="_blank" href="#selfieTarget"><i class="fa fa-id-card "></i></a>&nbsp;&nbsp;&nbsp;&nbsp;Socials
                                 <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
                                 <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
-                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
+                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>&nbsp;&nbsp;&nbsp;&nbsp;Contact
+                                <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                                <a class="social-button phone" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+
                             </div> 
+                         
                 
                 <hr>
                 <h4>web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></h4>
@@ -106,7 +112,8 @@
                             <div class="portfolio-resume-contact-info">
                                 <a href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i>912-656-8462</a><br>
 
-                            </div><img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
+                            </div>
+                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header"><i class="fa fa-graduation-cap" style="color:white" aria-hidden="true"></i> EDUCATION</h3>
