--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row">
                                                          <!-- SOC MEDIA BTNS -->
                             <div class="rounded-social-buttons ">
-                                <a class="social-button paint-brush" target="_blank" href="#pencilTarget"><i class="fa fa-paint-brush "></i></a>
+                                <a class="social-button paint-brush" target="_blank" href="projects.html"><i class="fa fa-paint-brush "></i></a>
                                 <a class="social-button id-card" target="_blank" href="#selfieTarget"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
                                 <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
                                 <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
@@ -342,8 +342,8 @@
             <script src="js/text-color.js"></script>
             <script src="js/buttonAppend.js"></script>
 
-            <!-- copyright
-    © 2017 SpotlessFlies -->
+        copyright
+     © 2017 Leslie Moses  
 </body>
 
 </html>
