project timeline improved

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
           <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
           <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e">|</span>
           <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
-          <a class="social-button phone" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+          <a class="social-button envelope" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         </div>
         <hr>
 
@@ -99,7 +99,7 @@
           </div>
           <div class="timeline-content right">
             <p class="timeline-content-date">
-              <span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span> Doin&rsquo; ?</span>
+              <span style="font-family:'Lobster', cursive; font-size: 34px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span> Doin&rsquo; ?</span>
               <br>
               <br>
 
@@ -130,7 +130,7 @@
               <span style="font-size:30px; color:white; font-family: 'Bungee Shade', cursive;">You Got This</span>
               <br>
               <br>
-              <p>App (still in progress) helps girls who are hopeless take the next step through stories</p>
+              <p>App (in progress) helps girls who are hopeless take the next step through stories</p>
               <br>
               <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img class="webImage" src="css/images/GotThis.png"></a>
               <span class="bold">My Role:</span>
@@ -138,7 +138,7 @@
               <br>
               <br>
               <span class="bold">Brand:</span>
-              <br> Playful yet trustworthy for young teens
+              <br> Encouraging, trustworthy, relatable
               <br>
               <br>
               <span class="bold">Tech:</span>
