wkg on home btns readability

--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 
 
 
-        <h1 class="leslieTitle">leslie <span class="mosesTitle">M<img id="bluePic" src="css/images/boughtMose.png" alt="Moses" width="140">s e s </span></h1><br>
+               <h1 class="leslieTitle"><a href="index.html">leslie <span class="mosesTitle">M<img id="bluePic" src="css/images/boughtMose.png" alt="Moses" width="140">s e s </span></a></h1><br>
 
 
       </div>
