--- a/cutCode.html
+++ b/cutCode.html
@@ -4,7 +4,129 @@ Available Fonts:
     font-family: 'Jura', sans-serif;
     font-family: 'Passion One', cursive;
 
+<!-- START original proj display -->
 
+            <!-- END socials row -->
+                     
+
+            <!-- Start of body below -->
+
+            <br>
+            <br>
+
+
+            <!-- END SWAP responsive icons  -->
+
+
+
+          
+            <br> <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <!-- END RESUME -->
+            <!-- DEV + Design portfolio -->
+            <!--  row start for pics caro -->
+            <div class="row bgimg" data-equalizer data-equalizer-mq="large-up">
+                <div id="pencilTarget" class="page-scroll">
+
+
+                    <h2><br><span class="designHed">d e s i g n</span><br><span class="devHed">work&nbsp;</span></h2>
+                    <br>
+                    <br>
+                    <br>
+
+                    <!-- START BUY OR BUCK SAMPLE -->
+                    <div id="buck" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
+                        <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span>
+                        <span style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
+                        <hr>
+                        </span>
+                        <span class="smText">Gives designers feedback through users’ opinions
+                        <br>
+                        <br>
+                        <span class="bold">MY ROLE </span>
+                        <br> Designer</span><span class="hideDescribe">
+                        <br>
+                        <br>
+                        <span class="bold ">TOOLS</span>
+                        <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design</span>
+
+                        </span>
+                        <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
+                            <span class="image-hover-wrapper-reveal">
+      <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span></span>
+
+                            </p>
+                            </span>
+                        </a>
+                    </div>
+                    <br>
+                    <br> <br> <br>
+                    <br>
+                    <br>
+                    <br>
+
+                    <!-- START HOW YOU DOIN'? SAMPLE-->
+                    <div id="doin" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
+                        <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span>                        Doin&rsquo;?</span>
+                        </span>
+                        <hr> Tracks how teens feel daily through selfies and text analysis
+                        <br>
+                        <br>
+                        <span class="bold">MY ROLE </span>
+                        <br> Designer
+                        <br>
+                        <br>
+                        <span class="bold">TOOLS</span>
+                        <br>HTML, CSS, Foundation, animation, JavaScript
+
+                        </span>
+                        <a target="_blank" href="https://cjjordan.github.io/How-You-Doing/"><img src="css/images/HowYouDoing.png">
+                            <span class="image-hover-wrapper-reveal">
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 45px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span></span>
+                            <br>
+                            </p>
+                            </span>
+                        </a>
+                    </div>
+                    <br>
+                    <br>
+                    <br> <br> <br>
+                    <br>
+                    <br>
+
+                    <!-- START YOU GOT THIS SAMPLE-->
+                    <div id="got" class="image-hover-wrapper small-11 columns panel end page-scroll" data-equalizer-watch>
+                        <span class="image-hover-wrapper-banner "> <span  style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span>
+                        <hr>Helps girls who are hopeless take the next step through stories
+                        <br>
+                        <br>
+                        <span class="bold">MY ROLE </span>
+                        <br> Developer, Designer
+                        <br>
+                        <br>
+                        <span class="bold">TOOLS</span>
+                        <br> HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
+                        <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img src="css/images/GotThis.png">
+                            <span class="image-hover-wrapper-reveal">
+      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe" style="font-size:34px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:#444">You Got This</span></p>
+                            </span>
+                        </a>
+
+                    </div>
+                </div>
+
+                <!-- rowEND: -->
+                <br>
+                <br>
+            </div>
+            <br>
+<!-- END ORIGINAL PROJECTS DISPLAY -->
     <!--START de 1200 MEDIA Q  -->
 
 
