--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                                          <!-- SOC MEDIA BTNS -->
                             <div class="rounded-social-buttons ">
                                 <a class="social-button paint-brush"   href="projects.html"><i class="fa fa-paint-brush "></i></a>
-                                <a class="social-button id-card" thref="resume.html"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
+                                <a class="social-button id-card" href="resume.html"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
                                 <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
                                 <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
                                 <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e">|</span>
@@ -53,281 +53,7 @@
                 
 
             </div>
-            <!-- END socials row -->
-                     
 
-            <!-- Start of body below -->
-
-            <br>
-            <br>
-
-
-            <!-- END SWAP responsive icons  -->
-
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <!-- START RESUME -->
-            <div id="selfieTarget">
-                <span class="rezTitle">r e s u m e </span>
-
-                <div class="portfolio-resume row">
-
-                    <div class="large-3 columns">
-                        <div class="portfolio-resume-wrapper">
-                            <!-- SOC MEDIA BTNS -->
-                            <div class="rounded-social-buttons">
-                                <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
-                                <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
-                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
-                            </div><br>
-                            <div class="portfolio-resume-contact-info">
-                                <a href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i>lesmoses@gmail.com</a>
-                            </div>
-                            <div class="portfolio-resume-contact-info">
-                                <a href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i>912-656-8462</a><br>
-
-                            </div>
-                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
-                            <br>
-                            <!-- EDUCATION section -->
-                            <h3 class="portfolio-resume-header"><i class="fa fa-graduation-cap" style="color:white" aria-hidden="true"></i> EDUCATION</h3>
-                            <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                            <i class="fa fa-graduation-cap" aria-hidden="true"></i><span style="font-size:14px"> July '17</span>                            <br>
-                            <span class="rezSubHed">Full Stack Web Development Bootcamp</span>
-                            <br>
-                            <span class="rezDetails">&bull; Intensive, 24-week bootcamp to understand, design and build web applications</span>
-                            <br>
-                            <br>
-
-                            <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap"
-                                aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
-
-                            <br>
-                            <span class="rezSubHed">B.A. English Comm.</span>
-                            <br> &bull; Cum laude <br> &bull; President’s list <br> &bull; Dean's list <br><br>
-                            <span style="font-weight:bolder">Honor Societies</span><br>
-
-                            <span class="bullet"> &bull;</span> Sigma Tau Delta (English)<br>
-                            <span class="bullet"> &bull;</span> Omicron Delta Kappa (leadership)
-
-                        </div>
-                    </div>
-
-                    <div class="large-3 columns">
-                        <div class="portfolio-resume-wrapper">
-                            <h3 class="portfolio-resume-header"><i class="fa fa-paint-brush" aria-hidden="true"></i> Design <span style="color:#ff1d8e">+</span> Development </h3>
-                            <div class="portfolio-resume-spacing">
-                                <!-- APPS Developed LIST -->
-                                <h5><strong>Projects:</strong></h5>
-                                <h6>(Click or scroll down)</h6>
-
-                                <!-- BUY OR BUCK NAME -->
-                                <a href="#buck">
-                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 29px; color: whitesmoke;">Buy</span><span style="color:whitesmoke">&nbsp;or </span><span style="font-family: 'Audiowide', cursive; font-size: 25px; color:whitesmoke">Buck</span> 
-                                </a>
-                                <br>
-                                <br>
-                                <!-- HOW YOU DOIN NAME -->
-                                <a href="#doin"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 29px ;color:whitesmoke">How <span style="color:whitesmoke">You</span> Doin&rsquo;? </span>
-                                </a>
-                                <br>
-                                <br>
-                                <!-- YOU GOT THIS NAME -->
-                                <a href="#got"> 
-                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:22px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:whitesmoke">You Got This</span></a>
-                                <br>
-                                <br>
-                                <h5><strong>Development with:</strong></h5>
-                                <p>Responsive design, HTML5, CSS3, JavaScript, JQuery, Bootstrap, Foundation, Firebase, Node,
-                                    MySQL, MongoDB, JSX, Express, Handlebars and React </p>
-
-
-                            </div>
-                            <div class="portfolio-resume-spacing">
-                                <h5><strong>Design Experience:</strong></h5>
-                                <p>Typography, InDesign, publication design, QuarkXPress</p>
-                                <span class="bullet"> &bull;</span> Special sections (e.g. glossy wedding guide)<br>
-                                <span class="bullet"> &bull;</span> Children’s prayer booklet | 6,000 copies sent nationally
-                                <br>
-                                <span class="bullet"> &bull;</span> Hundreds of newspaper pages
-
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="large-3 columns end">
-                        <div class="portfolio-resume-wrapper">
-                            <h3 class="portfolio-resume-header"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h3>
-                            <h5><strong>Georgia Press Association</strong></h5>
-                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | 2017 Religion Writing</a><br>
-                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia"> 2nd place | 2017 Feature Writing </a>                            <br>
-                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | 2015 Religion Coverage </a>                            <br><br>
-                            <h5><strong>S.C. Press Association</strong></h5>
-                            <span class="bullet"> &bull;</span> 3rd place | 2010 Article Series <br>
-                            <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm"> 1st place | 2009 Lifestyle Feature Writing </a>                            <br><br>
-                            <h5><strong>Armstrong State Univ.</strong></h5>
-                            <span style="font-weight:bold">&bull; Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
-
-                            <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
-
-                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and worked the last decade in print journalism. <br><br>                            
-                            &nbsp;&nbsp;Creative, and with an eye for design, she hopes coding skills will help her herald even
-                            more good news across the land.
-
-
-                            <!-- <div class="portfolio-resume-contact-info">
-
-                                <a href="tel:+19126568462"><i class="fa fa-id-card" aria-hidden="true"></i>Google Docs resume</a><br>
-                              </div> -->
-                            <br>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="page-scroll">
-                    <a href="#topRow">
-                                <button id="backTop">Top ^ </button>
-                            </a>
-                </div>
-            </div>
-            <br> <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <!-- END RESUME -->
-            <!-- DEV + Design portfolio -->
-            <!--  row start for pics caro -->
-            <div class="row bgimg" data-equalizer data-equalizer-mq="large-up">
-                <div id="pencilTarget" class="page-scroll">
-
-
-                    <h2><br><span class="designHed">d e s i g n</span><br><span class="devHed">work&nbsp;</span></h2>
-                    <br>
-                    <br>
-                    <br>
-
-                    <!-- START BUY OR BUCK SAMPLE -->
-                    <div id="buck" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-                        <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: floralwhite;">Buy</span>
-                        <span style="color:black">&nbsp;or</span><br><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span>
-                        <hr>
-                        </span>
-                        <span class="smText">Gives designers feedback through users’ opinions
-                        <br>
-                        <br>
-                        <span class="bold">MY ROLE </span>
-                        <br> Designer</span><span class="hideDescribe">
-                        <br>
-                        <br>
-                        <span class="bold ">TOOLS</span>
-                        <br> HTML, CSS, Google Font, Font Awesome, Foundation, responsive design</span>
-
-                        </span>
-                        <a target="_blank" href="http://vast-bastion-21748.herokuapp.com/"><img class="webImage" src="css/images/bucky.png">
-                            <span class="image-hover-wrapper-reveal">
-      <p class="visitLink">Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family: 'Pacifico', cursive; font-size: 40px; color: #ff5733;">Buy</span><span style="color:black">or</span><span style="font-family: 'Audiowide', cursive; font-size: 36px; color:black">Buck</span></span>
-
-                            </p>
-                            </span>
-                        </a>
-                    </div>
-                    <br>
-                    <br> <br> <br>
-                    <br>
-                    <br>
-                    <br>
-
-                    <!-- START HOW YOU DOIN'? SAMPLE-->
-                    <div id="doin" class="image-hover-wrapper small-11 columns panel" data-equalizer-watch>
-                        <span class="image-hover-wrapper-banner page-scroll"><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 37px; line-height: .2em ;color:white">How <span style="color:#FF4136">You</span>                        Doin&rsquo;?</span>
-                        </span>
-                        <hr> Tracks how teens feel daily through selfies and text analysis
-                        <br>
-                        <br>
-                        <span class="bold">MY ROLE </span>
-                        <br> Designer
-                        <br>
-                        <br>
-                        <span class="bold">TOOLS</span>
-                        <br>HTML, CSS, Foundation, animation, JavaScript
-
-                        </span>
-                        <a target="_blank" href="https://cjjordan.github.io/How-You-Doing/"><img src="css/images/HowYouDoing.png">
-                            <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe"><span style="font-family:'Lobster', cursive; font-size: 45px; color:#FF4136">How <span style="color:grey">You</span> Doin&rsquo;?</span></span>
-                            <br>
-                            </p>
-                            </span>
-                        </a>
-                    </div>
-                    <br>
-                    <br>
-                    <br> <br> <br>
-                    <br>
-                    <br>
-
-                    <!-- START YOU GOT THIS SAMPLE-->
-                    <div id="got" class="image-hover-wrapper small-11 columns panel end page-scroll" data-equalizer-watch>
-                        <span class="image-hover-wrapper-banner "> <span  style="font-size:30px ; font-family: 'Bungee Shade', cursive;">You Got This</span>
-                        <hr>Helps girls who are hopeless take the next step through stories
-                        <br>
-                        <br>
-                        <span class="bold">MY ROLE </span>
-                        <br> Developer, Designer
-                        <br>
-                        <br>
-                        <span class="bold">TOOLS</span>
-                        <br> HTML, CSS, Foundation, Firebase, Bootstrap, JSX, React, JavaScript </span>
-                        <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img src="css/images/GotThis.png">
-                            <span class="image-hover-wrapper-reveal">
-      <p>Visit <i class="fa fa-share" aria-hidden="true"></i><br><span class="hideDescribe" style="font-size:34px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:#444">You Got This</span></p>
-                            </span>
-                        </a>
-
-                    </div>
-                </div>
-
-                <!-- rowEND: -->
-                <br>
-                <br>
-            </div>
-            <br>
-            <div class="row">
-                <div class="page-scroll">
-                    <a href="#topRow">
-                            <button id="backTop">Top ^ </button>
-                        </a>
-                    <br>
-                    <br>
-                    <br>
-                </div>
-            </div>
 
 
 
@@ -341,8 +67,12 @@
             <script src="js/app.js"></script>
             <script src="js/text-color.js"></script>
             <script src="js/buttonAppend.js"></script>
-
-        copyright
+   <br>
+                    <br> <br> <br>
+                    <br>
+                    <br>
+                    <br>
+        Copyright
      © 2017 Leslie Moses  
 </body>
 
