--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
       <div class="row">
         <!-- SOC MEDIA BTNS -->
         <div class="rounded-social-buttons ">
-          <a class="social-button paint-brush" target="_blank" href="#pencilTarget"><i class="fa fa-paint-brush "></i></a>
-          <a class="social-button id-card" target="_blank" href="#selfieTarget"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
+          <a class="social-button paint-brush"  href="projects.html"><i class="fa fa-paint-brush "></i></a>
+          <a class="social-button id-card"  href="resume.html"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
           <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
           <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
           <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e">|</span>
