--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <hr>
 
 <!-- START responsive blog -->
-<div class="responsive-blog-post">
+<!-- <div class="responsive-blog-post">
   <div class="individual-post">
   <p>Hi, I’m a web designer <span style="color:#ff1d8e">+</span> developer in Savannah, Ga.</p>
   <p> Please see my  <a class="social-button paint-brush" href="projects.html"><i class="fa fa-paint-brush "></i> projects</a>,  <a class="social-button id-card" href="resume.html"><i class="fa fa-id-card "></i> resume</a> <span style="color:#ff1d8e">+</span> <a class="social-button" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie">contact me <i class="fa fa-envelope" aria-hidden="true"></i></a> so I can
                     create your webpage (<span style="color:#ff1d8e">+</span> herald your message). </p>
   </div>
-</div>
+</div> -->
 
 
 
