--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 </div>
                 <hr>
 
-                <h4>web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></h4>
+                  
+                <h4>  <a href="projects.html">web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a></h4>
                 <hr>
 
 <!-- START responsive blog -->
