--- a/resume.html
+++ b/resume.html
@@ -171,8 +171,9 @@
             <div class="row">
                 <div class="page-scroll">
                     <a href="#topRow">
-                                <button id="backTop">Top ^ </button>
+                                <button id="backTop"><i class="fa fa-arrow-circle-o-up fa-4x" aria-hidden="true"></i></button>
                             </a>
+                            <br><br> <br><br>
                 </div>
             </div>
 
