--- a/cutCode.html
+++ b/cutCode.html
@@ -4,6 +4,12 @@ Available Fonts:
     font-family: 'Jura', sans-serif;
     font-family: 'Passion One', cursive;
 
+
+
+    <!-- START favion-->
+  <br><span style="font-family:pacifico; font-size:183px; color:white; font-weight:100;">l</span><span style="font-family:monofett; font-size:483px; color:#ff1d8e; font-weight:100;">m </span><br><br>
+    <!-- END -->
+
 <!-- START original proj display -->
 
             <!-- END socials row -->
