--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
   
                 </div>
                 <hr>
-
                   <!-- <span id="projects"></span> -->
                   <!-- <span class="btnLabel"></span> -->
-                <h4>  <a href="projects.html">web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a></h4>
+                <h4><a href="projects.html">web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a></h4>
                 <hr>
 
 <!-- START responsive blog -->
@@ -89,7 +88,7 @@
             <br> <br> <br>
             <br>
             <br>
-            <br> Copyright © 2017 Leslie Moses
+            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 </body>
 
 </html>
