--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/projects.css">
   <!-- Google Fonts link -->
-  <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
+  <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Fredericka+the+Great|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
     rel="stylesheet">
   <!-- Use these stylesheets for icons and typography in head of your HTML doc if you want :) -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
@@ -261,6 +261,7 @@
           <br>
         </div>
       </div>
+            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 
 
 
