--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/resume.css">
   <!-- Google Fonts link -->
-  <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
+  <link href="https://fonts.googleapis.com/css?family=Monofett|Bungee+Shade|Fredericka+the+Great|Open+Sans|Open+Sans+Condensed:300|Audiowide|Ranchers|Pacifico|Architects+Daughter|Nova+Mono|Comfortaa|Lobster|Fascinate+Inline|Gloria+Hallelujah|Space+Mono|Jura|Kaushan+Script|Passion+One|Satisfy|Syncopate"
     rel="stylesheet">
   <!-- Use these stylesheets for icons and typography in head of your HTML doc if you want :) -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
@@ -33,15 +33,17 @@
       <!-- START socials row -->
       <div class="row">
         <!-- SOC MEDIA BTNS -->
-        <div class="rounded-social-buttons ">
-          <a class="social-button paint-brush"  href="projects.html"><i class="fa fa-paint-brush "></i></a>
-          <a class="social-button id-card" href="resume.html"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
-          <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
-          <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
-          <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e">|</span>
-          <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
-          <a class="social-button envelope" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-        </div>
+                <div class="rounded-social-buttons ">
+                      
+                    <a class="social-button paint-brush" href="projects.html"><span class="projectsReveal">Projects </span><i class="fa fa-paint-brush "> </i></a>
+                    <a class="social-button id-card" href="resume.html"><span class="resumeReveal">Resume </span><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e"> | </span>
+                    <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                    <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                    <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e"> |</span>
+                    <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                    <a class="social-button" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a><br>
+  
+                </div>
         <hr>
 
         <h4>Resume </h4>
@@ -177,6 +179,7 @@
                 </div>
             </div>
 
+            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 
 
       <!-- end of main row that includes form -->
