--- a/yours.html
+++ b/yours.html
@@ -66,6 +66,7 @@
                 </div>
             </div>
 
+            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 
 
       <!-- end of main row that includes form -->
