betta pgs: proj y Res

--- a/projects.html
+++ b/projects.html
@@ -34,13 +34,13 @@
       <div class="row">
         <!-- SOC MEDIA BTNS -->
         <div class="rounded-social-buttons ">
-          <a class="social-button paint-brush"  href="projects.html"><i class="fa fa-paint-brush "></i></a>
-          <a class="social-button id-card"  href="resume.html"><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e">|</span>
-          <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
-          <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
-          <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e">|</span>
-          <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
-          <a class="social-button envelope" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <a class="social-button paint-brush" href="projects.html"><span class="projectsReveal">Projects </span><i class="fa fa-paint-brush "> </i></a>
+                    <a class="social-button id-card" href="resume.html"><span class="resumeReveal">Resume </span><i class="fa fa-id-card "></i></a><span style="color:#ff1d8e"> | </span>
+                    <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                    <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                    <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e"> |</span>
+                    <a class="social-button phone" target="_blank" href="tel:+19126568462"><span class="phoneReveal">912.656.8462</span><i class="fa fa-phone" aria-hidden="true"></i></a>
+                    <a class="social-button mail" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><span class="emailReveal">LesMoses@gmail.com</span><i class="fa fa-envelope" aria-hidden="true"></i></a><br>
         </div>
         <hr>
 
