--- a/resume.html
+++ b/resume.html
@@ -40,9 +40,9 @@
                     <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
                     <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
                     <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a><span style="color:#ff1d8e"> |</span>
-                    <a class="social-button phone" target="_blank" href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                    <a class="social-button" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"></i></a><br>
-  
+                    <a class="social-button phone" target="_blank" href="tel:+19126568462"><span class="phoneReveal">912.656.8462</span><i class="fa fa-phone" aria-hidden="true"></i></a>
+                    <a class="social-button mail" target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><span class="emailReveal">LesMoses@gmail.com</span><i class="fa fa-envelope" aria-hidden="true"></i></a><br>
+
                 </div>
         <hr>
 
