rez journalism added

--- a/resume.html
+++ b/resume.html
@@ -100,8 +100,8 @@
                         <div class="portfolio-resume-wrapper">
                             <h3 class="portfolio-resume-header"><i class="fa fa-paint-brush" aria-hidden="true"></i> Design <span style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#ff1d8e">+</span> Development </h3>
                             <div class="portfolio-resume-spacing">
+                                <span class="rezSubHed">Design projects</span><br>
                                 <!-- APPS Developed LIST -->
-                                <h5><strong>Projects:</strong></h5>
                                 <h6>(Click or scroll down)</h6>
 
                                 <!-- BUY OR BUCK NAME -->
@@ -136,13 +136,7 @@
                                 <span class="bullet"> &bull;</span> Hundreds of newspaper pages
 
                             </div>
-                        </div>
-
-                    </div>
-
-                    <div class="large-3 columns end">
-                        <div class="portfolio-resume-wrapper">
-                            <h3 class="portfolio-resume-header"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h3>
+                                                        <h3 class="portfolio-resume-header"><i class="fa fa-trophy" aria-hidden="true"></i> Awards</h3>
                             <h5><strong>Georgia Press Association</strong></h5>
                             <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | 2017 Religion Writing</a><br>
                             <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia"> 2nd place | 2017 Feature Writing </a>                            <br>
@@ -151,7 +145,37 @@
                             <span class="bullet"> &bull;</span> 3rd place | 2010 Article Series <br>
                             <span class="bullet"> &bull;</span> <a style="color:whitesmoke" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm"> 1st place | 2009 Lifestyle Feature Writing </a>                            <br><br>
                             <h5><strong>Armstrong State Univ.</strong></h5>
-                            <span style="font-weight:bold">&bull; Outstanding Staff Writer </span> | The Inkwell 2005 <br><br><br>
+                            <span style="font-weight:bold">&bull; Outstanding Staff Writer </span> | <i>The Inkwell</i> 2005 
+                        </div>
+
+                    </div>
+
+                    <div class="large-3 columns end">
+                        <div class="portfolio-resume-wrapper">
+
+                            <h3 class="portfolio-resume-header"><i class="fa fa-newspaper-o" style="color:white" aria-hidden="true"></i> Journalism</h3>
+                            <span class="rezSubHed">Freelance writer, photographer</span><br>
+                            <span style="font-size:14px">2013-current; 2007-’08</span>
+                            <br> 
+                            <span class="rezDetails">&bull; <i>Georgia Magazine, Savannah Morning News, Outreach Magazine, Hilton Head Monthly, Savannah Magazine, Spirit Newspaper, Newsmax.com </i></span>
+                            <br>
+                            <br>
+
+                            <span class="rezSubHed">Staff writer, photographer</span><br>
+                            <span style="font-size:14px">2011-’08</span>
+                            <br> 
+                            <span class="rezDetails">&bull; <i>Exponent Telegram</i> in Clarksburg, W.Va., 2011-’13; <br>&bull; <i>Newberry Observer</i> in Newberry, S.C., 2008-2011; <br>&bull;<i> The Inkwell </i>in Savannah, Ga., ’05 </span>
+                            <br>
+                            <br>
+
+                             <span class="rezSubHed">Newsroom intern</span><br>
+                            <span style="font-size:14px">Summer ’06</span>
+                            <br> 
+                            <span class="rezDetails">&bull; <i>The Voice of the Martyrs</i> in Bartlesville, Okla. </span>
+                            <br>
+                            <br>
+
+                        
 
                             <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
 
