--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
                             <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;<i class="fa fa-graduation-cap"
                                 aria-hidden="true"></i><span style="font-size:14px"> Dec. '06</span><br>
 
-                            <br>
+                          
                             <span class="rezSubHed">B.A. English Comm.</span>
                             <br> &bull; Cum laude (3.37) <br> &bull; President’s list <br> &bull; Dean's list <br><br>
                             <span style="font-weight:bolder">Honor Societies</span><br>
@@ -100,7 +100,7 @@
                         <div class="portfolio-resume-wrapper">
                             <h3 class="portfolio-resume-header"><i class="fa fa-paint-brush" aria-hidden="true"></i> Design <span style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#ff1d8e">+</span> Development </h3>
                             <div class="portfolio-resume-spacing">
-                                <span class="rezSubHed">Design projects</span><br>
+                                <span class="rezSubHed">Web Designer + Developer</span><br>
                                 <!-- APPS Developed LIST -->
                                 <h6>(Click or scroll down)</h6>
 
@@ -179,9 +179,19 @@
 
                             <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
 
-                            &nbsp;&nbsp;Leslie grew up in Savannah, Ga., and worked the last decade in print journalism. <br><br>                            
-                            &nbsp;&nbsp;Creative, and with an eye for design, she hopes coding skills will help her herald even
-                            more good news across the land.
+                           &nbsp;&nbsp;Do you have a story to tell? <br><br>                            
+
+&nbsp;&nbsp;Leslie Moses, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes and grit.
+<br><br>                            
+&nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.<br><br>
+&nbsp;&nbsp;Do you have a great business or story? <br>
+&nbsp;&nbsp;Let's tell it creatively and clearly to an online audience. <br> <br>
+<i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  &nbsp;&nbsp;Let's get started: <br>
+              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; 912.656.8462</span></i></a><br>
+                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; LesMoses@gmail.com</span></i></a><br>
+   </span>
+
+                           
 
 
                             <!-- <div class="portfolio-resume-contact-info">
