--- a/projects.html
+++ b/projects.html
@@ -180,8 +180,8 @@
        
 
               <span class="bold">Leslie Moses</span>
-              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif"> 912.656.8462</span></i></a><br>
-                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif"> LesMoses@gmail.com</span></i></a><br>
+              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; 912.656.8462</span></i></a><br>
+                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; LesMoses@gmail.com</span></i></a><br>
    </span>
           </div>
          </div> 
@@ -269,20 +269,18 @@
       </div>
 
 
-
-
       <!-- END timeline -->
 
-          <div class="row">
-        <div class="page-scroll">
-          <a href="#topRow">
-                            <button id="backTop">Top ^ </button>
-                        </a>
-          <br>
-          <br>
-          <br>
-        </div>
-      </div>
+      
+
+                  <div class="row">
+                <div class="page-scroll">
+                    <a href="#topRow">
+                                <button id="backTop"><i class="fa fa-arrow-circle-o-up fa-4x" aria-hidden="true"></i></button>
+                            </a>
+                            <br><br> <br><br>
+                </div>
+            </div>
             <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 
 
