better contact on res, proj pages

--- a/resume.html
+++ b/resume.html
@@ -179,16 +179,21 @@
 
                             <h3 class="portfolio-resume-header"><i class="fa fa-user" aria-hidden="true"></i> Bio</h3>
 
-                           &nbsp;&nbsp;Do you have a story to tell? <br><br>                            
+                                                     
 
 &nbsp;&nbsp;Leslie Moses, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes and grit.
 <br><br>                            
 &nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.<br><br>
-&nbsp;&nbsp;Do you have a great business or story? <br>
-&nbsp;&nbsp;Let's tell it creatively and clearly to an online audience. <br> <br>
-<i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  &nbsp;&nbsp;Let's get started: <br>
-              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; 912.656.8462</span></i></a><br>
-                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; LesMoses@gmail.com</span></i></a><br>
+&nbsp;&nbsp;Do you have a great story or business?  Let's tell it creatively and clearly online. <br>
+<hr>>
+<!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
+              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; 912.656.8462</span></i></a><br>
+                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span></i></a><br><br>
+                             <div class="rounded-social-buttons">
+                                <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                                <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
+                            </div>  
    </span>
 
                            
