--- a/projects.html
+++ b/projects.html
@@ -57,10 +57,6 @@
 
 
       <!-- Start of body below -->
-
-      <br>
-      <br>
-
       <!-- START timeline -->
 
       <div class="timeline">
@@ -180,8 +176,13 @@
        
 
               <span class="bold">Leslie Moses</span>
-              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; 912.656.8462</span></i></a><br>
-                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif">&nbsp; LesMoses@gmail.com</span></i></a><br>
+              <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; 912.656.8462</span></i></a><br>
+                    <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span></i></a><br><br>
+                             <div class="rounded-social-buttons">
+                                <a class="social-button linkedin" target="_blank" href="https://www.linkedin.com/in/leslie-moses-045b2b88/"></a>
+                                <a class="social-button github" target="_blank" href="https://github.com/LeslieMoses"></a>
+                                <a class="social-button twitter" target="_blank" href="https://twitter.com/leslieamoses"></a>
+                            </div>  
    </span>
           </div>
          </div> 
