--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,13 @@
     rel="stylesheet">
   <!-- Use these stylesheets for icons and typography in head of your HTML doc if you want :) -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -185,7 +192,8 @@
 <br><br>                            
 &nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.<br><br>
 &nbsp;&nbsp;Do you have a great story or business?  Let's tell it creatively and clearly online. <br>
-<hr>>
+
+<hr>
 <!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
               <br>              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; 912.656.8462</span></i></a><br>
                     <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie"><i class="fa fa-envelope fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span></i></a><br><br>
